--- a/.gitignore
+++ b/.gitignore
@@ -165,6 +165,9 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# Note files
+course_notes
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
